# Cranberry

./: Cranberry_manual.txt  Humidity+Boiler_pinmap.txt  requirements.txt  web_app.html
Arduino/: ac_sensor.ino  platformio.ini
Arduino/ac_sensor/: ac_sensor.ino  comm_light.ino  source.ino
Arduino/src/: main.ino
Cranberry_blog/symbols/: downrev.log,1  esp12.psm  rel01.psm
Misc/orcad/: CUSTOM_PARTS.OLB  cranberry_1.DBK  cranberry_2.DBK  cranberry_3.DBK
Misc/symbols/: ESP12.dra  REL01.dra  master.tag
ac_controller_service/: CMakeLists.txt  package.xml
backup/: 10100743.did  CRANBERRY_BOARD.DRC  CRANBERRY_BOARD.DSN  CRANBERRY_BOARD.DSN.3sav  CRANBERRY_BOARD.opj  CRANBERRY_BOARD_0.DBK  CRANBERRY_BOARD_2.DBK  CUSTOM_PARTS_0.OBK  CUSTOM_PARTS_1.OBK  CUSTOM_PARTS_2.OBK  allegro.jrl  dangling_lines.rpt
backup/Footprintsdsf/: DHT22.dra  allegro.jrl  batch_drc.log,2  dht22.psm
cbt/: CMakeLists.txt  package.xml
cranberry_new/: package-lock.json  package.json
cranberry_test/: index.html  style.css
cranberry_topic/: CMakeLists.txt  package.xml
cranberry_topic/src/: ac_data_publisher.cpp  ac_data_subscriber.cpp  comm_light_server.cpp
cranberry_topic/srv/: CommBoiler.srv  CommLight.srv
light_service/: CMakeLists.txt  package.xml
myvenv/: pyvenv.cfg
orcad/: CRANBERRY.DSN  CRANBERRY_0.DBK  CRANBERRY_BOARD.DRC  CRANBERRY_BOARD.DSN  CRANBERRY_BOARD.DSN.3sav  CRANBERRY_BOARD.opj  CRANBERRY_BOARD_0.DBK  CRANBERRY_BOARD_1.DBK  CRANBERRY_BOARD_2.DBK  CRANBERRY_BOARD_3.DBK  CUSTOM_PARTS_0.OBK  DA_CONVERTER.DSN  DA_CONVERTER.opj  DA_CONVERTER_0.DBK  DA_CONVERTER_1.DBK  LIBRARY1.OLB  LIBRARY1.OPJ_LOG.txt  LIBRARY1_0.OBK  LIBRARY1_1.OBK  LIBRARY1_2.OBK  LIBRARY1_3.OBK  cranberry.opj
pyflask/: app  app.py
roslibjs/: package-lock.json
web-env/: pyvenv.cfg
webserver/: config.py  db.sqlite3  flaskrun.bat
(+139 files in other folders)
